syntax = "proto3";

option csharp_namespace = "MigrationTool.GrpcServer.Protos";

package migration;

// ==============================================
// Migration Service - Main Operations
// ==============================================

service MigrationService {
  // Analyze solution file and return metadata
  rpc AnalyzeSolution(AnalyzeSolutionRequest) returns (SolutionInfo);
  
  // Get detailed project information
  rpc GetProjectDetails(ProjectDetailsRequest) returns (ProjectDetails);
  
  // Get dependency graph
  rpc GetDependencyGraph(DependencyGraphRequest) returns (DependencyGraph);
  
  // Validate migration plan
  rpc ValidatePlan(MigrationPlan) returns (ValidationResult);
  
  // Execute migration plan with streaming progress
  rpc ExecuteMigration(MigrationPlan) returns (stream MigrationProgress);
  
  // Get all available projects
  rpc ListProjects(ListProjectsRequest) returns (ProjectList);
  
  // Analyze namespaces across solution
  rpc AnalyzeNamespaces(AnalyzeNamespacesRequest) returns (NamespaceAnalysis);
  
  // Get package references
  rpc GetPackages(GetPackagesRequest) returns (PackageList);
}

// ==============================================
// Request Messages
// ==============================================

message AnalyzeSolutionRequest {
  string solution_path = 1;
}

message ProjectDetailsRequest {
  string project_name = 1;
}

message DependencyGraphRequest {
  // empty for now - gets full graph
}

message ListProjectsRequest {
  bool include_tests = 1;
  bool include_source = 2;
}

message AnalyzeNamespacesRequest {
  // empty for now
}

message GetPackagesRequest {
  // empty for now
}

// ==============================================
// Response Messages
// ==============================================

message SolutionInfo {
  string name = 1;
  string path = 2;
  int32 project_count = 3;
  int32 test_project_count = 4;
  int32 source_project_count = 5;
  int32 total_files = 6;
  int32 total_classes = 7;
  int32 total_tests = 8;
  repeated ProjectInfo projects = 9;
}

message ProjectInfo {
  string name = 1;
  string path = 2;
  string target_framework = 3;
  ProjectType project_type = 4;
  string root_namespace = 5;
  bool is_test_project = 6;
  int32 file_count = 7;
  int32 class_count = 8;
  int32 test_count = 9;
  repeated ProjectReference project_references = 10;
  repeated PackageReference package_references = 11;
}

message ProjectDetails {
  ProjectInfo info = 1;
  repeated SourceFileInfo files = 2;
}

message SourceFileInfo {
  string path = 1;
  string relative_path = 2;
  repeated string namespaces = 3;
  repeated ClassInfo classes = 4;
  int32 test_count = 5;
}

message ClassInfo {
  string name = 1;
  string full_name = 2;
  string namespace = 3;
  TypeKind kind = 4;
}

message ProjectReference {
  string name = 1;
  string path = 2;
}

message PackageReference {
  string name = 1;
  string version = 2;
}

message ProjectList {
  repeated ProjectInfo projects = 1;
}

message DependencyGraph {
  repeated GraphNode nodes = 1;
  repeated GraphEdge edges = 2;
}

message GraphNode {
  string id = 1;
  string name = 2;
  string type = 3; // "project", "file", "type"
  ProjectType project_type = 4;
}

message GraphEdge {
  string source = 1;
  string target = 2;
  string type = 3; // "reference", "inheritance", "usage"
}

message NamespaceAnalysis {
  repeated NamespaceGroup groups = 1;
}

message NamespaceGroup {
  string namespace = 1;
  int32 file_count = 2;
  int32 type_count = 3;
  repeated string projects = 4;
}

message PackageList {
  repeated PackageGroup groups = 1;
}

message PackageGroup {
  string package_name = 1;
  repeated PackageUsage usages = 2;
}

message PackageUsage {
  string project_name = 1;
  string version = 2;
}

// ==============================================
// Migration Plan & Execution
// ==============================================

message MigrationPlan {
  string name = 1;
  string description = 2;
  repeated MigrationStep steps = 3;
}

message MigrationStep {
  int32 index = 1;
  MigrationAction action = 2;
  string source = 3;
  string target = 4;
  StepStatus status = 5;
  string error = 6;
}

message ValidationResult {
  bool is_valid = 1;
  repeated string errors = 2;
  repeated string warnings = 3;
}

message MigrationProgress {
  int32 current_step = 1;
  int32 total_steps = 2;
  double percent_complete = 3;
  string current_action = 4;
  bool completed = 5;
  bool success = 6;
  string error_message = 7;
  MigrationStep current_step_details = 8;
}

// ==============================================
// Enums
// ==============================================

enum ProjectType {
  CLASS_LIBRARY = 0;
  CONSOLE = 1;
  WPF = 2;
  WINFORMS = 3;
  WEB = 4;
  WEB_API = 5;
  BLAZOR = 6;
  MAUI = 7;
  TEST = 8;
  OTHER = 9;
}

enum TypeKind {
  CLASS = 0;
  INTERFACE = 1;
  ENUM = 2;
  STRUCT = 3;
  RECORD = 4;
  DELEGATE = 5;
}

enum MigrationAction {
  MOVE_FILE = 0;
  MOVE_FOLDER = 1;
  COPY_FILE = 2;
  COPY_FOLDER = 3;
  RENAME_NAMESPACE = 4;
  ADD_PROJECT_REFERENCE = 5;
  REMOVE_PROJECT_REFERENCE = 6;
}

enum StepStatus {
  PENDING = 0;
  IN_PROGRESS = 1;
  COMPLETED = 2;
  FAILED = 3;
}
