using Grpc.Core;
using MigrationTool.GrpcServer.Protos;

namespace MigrationTool.GrpcServer.Services;

/// <summary>
/// gRPC service implementation for Migration Tool.
/// TODO: Connect to your MigrationTool.Core services here.
/// </summary>
public class MigrationServiceImpl : MigrationService.MigrationServiceBase
{
    private readonly ILogger<MigrationServiceImpl> _logger;
    
    // TODO: Inject your services here
    // private readonly ISolutionAnalyzer _solutionAnalyzer;
    // private readonly IProjectAnalyzer _projectAnalyzer;
    // private readonly IMigrationExecutor _migrationExecutor;

    public MigrationServiceImpl(ILogger<MigrationServiceImpl> logger)
    {
        _logger = logger;
    }

    public override async Task<SolutionInfo> AnalyzeSolution(
        AnalyzeSolutionRequest request, 
        ServerCallContext context)
    {
        _logger.LogInformation("Analyzing solution: {Path}", request.SolutionPath);
        
        try
        {
            // TODO: Replace with actual implementation
            // var solution = await _solutionAnalyzer.AnalyzeSolutionAsync(request.SolutionPath);
            
            // Mock data for now
            var mockSolution = new SolutionInfo
            {
                Name = "Sample Solution",
                Path = request.SolutionPath,
                ProjectCount = 12,
                TestProjectCount = 4,
                SourceProjectCount = 8,
                TotalFiles = 156,
                TotalClasses = 234,
                TotalTests = 89
            };
            
            // Add mock projects
            mockSolution.Projects.Add(new ProjectInfo
            {
                Name = "Core.Library",
                Path = "/path/to/Core.Library.csproj",
                TargetFramework = "net9.0",
                ProjectType = ProjectType.ClassLibrary,
                RootNamespace = "MyApp.Core",
                IsTestProject = false,
                FileCount = 25,
                ClassCount = 45,
                TestCount = 0
            });
            
            mockSolution.Projects.Add(new ProjectInfo
            {
                Name = "Core.Tests",
                Path = "/path/to/Core.Tests.csproj",
                TargetFramework = "net9.0",
                ProjectType = ProjectType.Test,
                RootNamespace = "MyApp.Core.Tests",
                IsTestProject = true,
                FileCount = 15,
                ClassCount = 20,
                TestCount = 45
            });
            
            return await Task.FromResult(mockSolution);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Error analyzing solution");
            throw new RpcException(new Status(StatusCode.Internal, ex.Message));
        }
    }

    public override async Task<ProjectDetails> GetProjectDetails(
        ProjectDetailsRequest request, 
        ServerCallContext context)
    {
        _logger.LogInformation("Getting project details: {Name}", request.ProjectName);
        
        // TODO: Implement actual logic
        var mockDetails = new ProjectDetails
        {
            Info = new ProjectInfo
            {
                Name = request.ProjectName,
                Path = $"/path/to/{request.ProjectName}.csproj",
                TargetFramework = "net9.0",
                ProjectType = ProjectType.ClassLibrary,
                FileCount = 10,
                ClassCount = 15
            }
        };
        
        // Add mock files
        mockDetails.Files.Add(new SourceFileInfo
        {
            Path = "/path/to/File1.cs",
            RelativePath = "File1.cs",
            TestCount = 0
        });
        
        return await Task.FromResult(mockDetails);
    }

    public override async Task<DependencyGraph> GetDependencyGraph(
        DependencyGraphRequest request, 
        ServerCallContext context)
    {
        _logger.LogInformation("Building dependency graph");
        
        // TODO: Implement actual graph building
        var mockGraph = new DependencyGraph();
        
        // Add mock nodes
        mockGraph.Nodes.Add(new GraphNode
        {
            Id = "project-1",
            Name = "Core.Library",
            Type = "project",
            ProjectType = ProjectType.ClassLibrary
        });
        
        mockGraph.Nodes.Add(new GraphNode
        {
            Id = "project-2",
            Name = "Core.Tests",
            Type = "project",
            ProjectType = ProjectType.Test
        });
        
        // Add mock edge
        mockGraph.Edges.Add(new GraphEdge
        {
            Source = "project-2",
            Target = "project-1",
            Type = "reference"
        });
        
        return await Task.FromResult(mockGraph);
    }

    public override async Task<ValidationResult> ValidatePlan(
        MigrationPlan request, 
        ServerCallContext context)
    {
        _logger.LogInformation("Validating migration plan: {Name}", request.Name);
        
        // TODO: Implement actual validation
        var result = new ValidationResult
        {
            IsValid = true
        };
        
        if (request.Steps.Count == 0)
        {
            result.IsValid = false;
            result.Errors.Add("Migration plan has no steps");
        }
        
        return await Task.FromResult(result);
    }

    public override async Task ExecuteMigration(
        MigrationPlan request, 
        IServerStreamWriter<MigrationProgress> responseStream, 
        ServerCallContext context)
    {
        _logger.LogInformation("Executing migration plan: {Name}", request.Name);
        
        try
        {
            var totalSteps = request.Steps.Count;
            
            for (int i = 0; i < totalSteps; i++)
            {
                var step = request.Steps[i];
                
                // Send progress update
                await responseStream.WriteAsync(new MigrationProgress
                {
                    CurrentStep = i + 1,
                    TotalSteps = totalSteps,
                    PercentComplete = ((i + 1) / (double)totalSteps) * 100,
                    CurrentAction = $"Executing {step.Action}: {step.Source}",
                    Completed = false,
                    Success = true,
                    CurrentStepDetails = step
                });
                
                // TODO: Execute actual migration step
                // await _migrationExecutor.ExecuteStepAsync(step);
                
                // Simulate work
                await Task.Delay(500);
            }
            
            // Send final completion message
            await responseStream.WriteAsync(new MigrationProgress
            {
                CurrentStep = totalSteps,
                TotalSteps = totalSteps,
                PercentComplete = 100,
                CurrentAction = "Migration completed successfully",
                Completed = true,
                Success = true
            });
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Error executing migration");
            
            await responseStream.WriteAsync(new MigrationProgress
            {
                Completed = true,
                Success = false,
                ErrorMessage = ex.Message
            });
        }
    }

    public override async Task<ProjectList> ListProjects(
        ListProjectsRequest request, 
        ServerCallContext context)
    {
        _logger.LogInformation("Listing projects");
        
        // TODO: Implement actual project listing
        var mockList = new ProjectList();
        
        mockList.Projects.Add(new ProjectInfo
        {
            Name = "Core.Library",
            ProjectType = ProjectType.ClassLibrary,
            IsTestProject = false,
            FileCount = 25
        });
        
        if (request.IncludeTests)
        {
            mockList.Projects.Add(new ProjectInfo
            {
                Name = "Core.Tests",
                ProjectType = ProjectType.Test,
                IsTestProject = true,
                FileCount = 15
            });
        }
        
        return await Task.FromResult(mockList);
    }

    public override async Task<NamespaceAnalysis> AnalyzeNamespaces(
        AnalyzeNamespacesRequest request, 
        ServerCallContext context)
    {
        _logger.LogInformation("Analyzing namespaces");
        
        // TODO: Implement actual namespace analysis
        var mockAnalysis = new NamespaceAnalysis();
        
        mockAnalysis.Groups.Add(new NamespaceGroup
        {
            Namespace = "MyApp.Core",
            FileCount = 12,
            TypeCount = 24,
        });
        mockAnalysis.Groups[0].Projects.Add("Core.Library");
        
        mockAnalysis.Groups.Add(new NamespaceGroup
        {
            Namespace = "MyApp.Core.Tests",
            FileCount = 8,
            TypeCount = 16,
        });
        mockAnalysis.Groups[1].Projects.Add("Core.Tests");
        
        return await Task.FromResult(mockAnalysis);
    }

    public override async Task<PackageList> GetPackages(
        GetPackagesRequest request, 
        ServerCallContext context)
    {
        _logger.LogInformation("Getting package references");
        
        // TODO: Implement actual package analysis
        var mockPackages = new PackageList();
        
        var xunitGroup = new PackageGroup { PackageName = "xunit" };
        xunitGroup.Usages.Add(new PackageUsage
        {
            ProjectName = "Core.Tests",
            Version = "2.9.0"
        });
        mockPackages.Groups.Add(xunitGroup);
        
        var moqGroup = new PackageGroup { PackageName = "Moq" };
        moqGroup.Usages.Add(new PackageUsage
        {
            ProjectName = "Core.Tests",
            Version = "4.20.0"
        });
        mockPackages.Groups.Add(moqGroup);
        
        return await Task.FromResult(mockPackages);
    }
}
